# solid_queue

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Doxyfile  README.md  solid_queue.spec
CMakeModules/: FindCheck.cmake
debian/: README  README.Debian  README.source  changelog  control  copyright  rules  solid-queue-dev.dirs  solid-queue-dev.install  solid-queue.dirs  solid-queue.install
example/: CMakeLists.txt  main.c
include/: solid_queue.h
src/: CMakeLists.txt  solid_queue.c
tests/: CMakeLists.txt  test_solid_queue.c
